# RK2_TiMP

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
strategies/: CurseRestrictionStrategy.h  LengthRestrictionStrategy.h  NoRestrictionStrategy.h  TextRestricter.h  TextRestricterStatic.h  TextRestrictionStrategy.h
tests/: text_restricter_static_tests.cpp  text_restricter_tests.cpp
